--- a/_posts/2020-06-08-scribble.md
+++ b/_posts/2020-06-08-scribble.md
@@ -4,6 +4,7 @@ title: First Scribble
 ---
 <!-- Post Content -->
            
+<div class="container">
 <p>
   Hello and Welcome to my blog. 
   <br/><br/>
@@ -19,3 +20,4 @@ title: First Scribble
   <br/>
   Looking forward to make it a habit.
 </p>
+</div>
