--- a/_posts/2020-06-08-scribble.md
+++ b/_posts/2020-06-08-scribble.md
@@ -10,12 +10,13 @@ title: First Scribble
   <br/><br/>
   Imagine there is no google or any other search engines, would you have cornered that investigation which you picked? Would you have crossed so many challenges? 
   It is the community who helps and those brilliant ideas (always relative!!) that break through to solve our equations. 
-  I believe through continous learning and experience, that Femto amps of spark lits to our brillant ideas. 
+  I believe through continuous learning and experience, that Femto amps of spark lit to our brilliant ideas. 
+
   <br/><br/>
   <i>The end of education is character</i>.. learn implement act and repeat that is what I do. 
 </p>
 <p>
-  Embarking on a technical challenges that provide high business value or productivity assests leads to many resuable artifacts. 
+  Embarking on a technical challenges that provide high business value or productivity assets leads to many reusable artifacts. 
   As and when I have such components I will be pushing to my git repo and reference it back to the post.
   <br/>
   Looking forward to make it a habit.
