--- a/_posts/2021-04-02-CKAD-Pods.md
+++ b/_posts/2021-04-02-CKAD-Pods.md
@@ -71,6 +71,8 @@ kubectl create -f ./nginx-pod-definition.yaml
     
     ```
     kubectl get pod <pod-name> -o yaml > <pod-definition-file-name.yaml>
+
+    kubectl get pod <pod-name> -o wide # all details of pod
     ```
 
 - To apply changes to a running pod, 
