Add POD defintion for container with arguments

--- a/_posts/2021-04-02-CKAD-Pods.md
+++ b/_posts/2021-04-02-CKAD-Pods.md
@@ -20,7 +20,7 @@ K8S YAML has 4 root levels required fields: `apiVersion`, `kind`, `metadata`, `s
 
 `spec`: Depending on type of object, the information changes. This is also a dictionary.
 
-Sample
+##### POD definition - vanilla flavour
 
 ```
 # nginx-pod-definition.yaml
@@ -41,6 +41,33 @@ spec:
           image: nginx
 
 ```
+
+##### POD definition file with Arguments
+
+Most of the container images built have docker file with `ENTRYPOINT` (which command to execute on startup of the container) and `CMD` (what are the input arguments to be passed). When creating a POD definition to deploy such a container and overwrite the default values defined in the `dockerfile`, include under the containers section `command` and `args`. ***Note that `args` accepts array of values.***
+
+```
+# tomcat-pod-definition.yaml
+
+apiVersion: v1
+
+kind: Pod
+
+metadata:
+    name: sample-app-2
+    labels:
+        app: api-2
+        type: frontend
+
+spec:
+    containers:
+        - name: tomcat-container
+          image: tomcat
+          command: '/usr/local/tomcat/entrypoint.sh'
+          args: ["8080"]
+```
+
+##### Create POD in K8S
 
 To create the container with the above file use:
 
@@ -82,3 +109,7 @@ kubectl create -f ./nginx-pod-definition.yaml
 
     kubectl edit pod <pod-name>
     ```
+
+#### Gottcha
+
+- Want to overwrite the container `entrypoint` on running container in the POD, no cannot. To do so, delete the POD and recreate it. **Use the deployment YAML which automatically takes care if it**
