search pod by label

--- a/_posts/2021-04-02-CKAD-Pods.md
+++ b/_posts/2021-04-02-CKAD-Pods.md
@@ -109,6 +109,11 @@ kubectl create -f ./nginx-pod-definition.yaml
 
     kubectl edit pod <pod-name>
     ```
+- To search for the PODs based on their labels:
+
+    ```
+    kubectl get pod -l <name-of-lable>=<value-of-label>
+    ```
 
 #### Gottcha
 
