Add security on POD defintion

--- a/_posts/2021-04-02-CKAD-Pods.md
+++ b/_posts/2021-04-02-CKAD-Pods.md
@@ -75,6 +75,43 @@ To create the container with the above file use:
 kubectl create -f ./nginx-pod-definition.yaml
 ```
 
+##### Security on POD
+
+K8S provides capabilities to add security at either POD level or at the container level. By adding SecurityContext Object with runAsUser along with required capabilities is a way forward to provide fine grained access to the users. Following is a sample POD definition:
+
+```
+# nginx-pod-definition.yaml
+
+apiVersion: v1
+
+kind: Pod
+
+metadata:
+    name: sample-app
+    labels:
+        app: api
+        type: frontend
+
+spec:
+    # POD level security
+    # Add user who has ID 1000
+    securityContext:
+        runAsUser: 2000
+
+    containers:
+        - name: nginx-container
+          image: nginx
+          # Container level security
+          # Add user who has ID 2000, and restricted capabilties to only manage system date
+          securityContext:
+            runAsUser: 2000
+            capablities:
+                add: ["SYS_DATE"]
+
+```
+
+
+
 #### Debugging
 
 - If the YAML is malformed, kubectl errors outs during execution. 
@@ -109,10 +146,18 @@ kubectl create -f ./nginx-pod-definition.yaml
 
     kubectl edit pod <pod-name>
     ```
+
 - To search for the PODs based on their labels:
 
     ```
     kubectl get pod -l <name-of-lable>=<value-of-label>
+    ```
+
+- To dive into the running pod, similar to Docker
+
+    ```
+    kubectl exec -it <name-of-pod> -- <command>
+    kubectl exec -it ubuntu-sleeper -- date -s 'Apr 27 2021, 07:00:00'
     ```
 
 #### Gottcha
