Added tags on markdown

--- a/content/blog/CKAD-preparation/2021-04-02-CKAD-Pods.md
+++ b/content/blog/CKAD-preparation/2021-04-02-CKAD-Pods.md
@@ -3,7 +3,7 @@ layout: post
 title: CKAD Preparation - Pods
 date: "2021-04-02"
 description: ""
-categories: [kubernetes ckad]
+tags: ["kubernetes", "ckad"]
 comments: true
 ---
 <!-- Post Content -->
